# truthid

./: .gitignore  CONTEXT.md  PROJECT_STATE.md  README.md  code-review-max-results.md
.github/workflows/: build-mobile.yml  build.yml  deploy-docs.yml
contracts/: .env.example  foundry.toml
contracts/script/: Deploy.s.sol  DeployFactory.s.sol  DeploySessionRegistry.s.sol  DeployVaultRegistry.s.sol
contracts/src/: DeviceRegistry.sol  ERC4337Constants.sol  IdentityRegistry.sol  IdentityResolver.sol  RecoveryManager.sol  SessionRegistry.sol  TruthIDAccount.sol  TruthIDAccountFactory.sol  VaultRegistry.sol
contracts/test/: DeviceRegistry.t.sol  IdentityConsentHelper.sol  IdentityRegistry.t.sol  RecoveryManager.t.sol  SessionRegistry.t.sol  TruthIDAccount.t.sol  TruthIDAccountFactory.t.sol  VaultRegistry.t.sol
desktop/: Dockerfile  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
desktop/linux/: 99-ledger.rules
desktop/src/: App.css  App.tsx  main.tsx  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: backup.rs  bundler.rs  config.rs  ipfs.rs  ledger.rs  lib.rs  local_signer_server.rs  permissions.rs  pin.rs  sign_message.rs  sign_request.rs  single_slot_channel.rs  vault.rs  vault_edit.rs
desktop/src/components/: ActiveSessions.tsx  ConnectLedger.tsx  ConnectWallet.tsx  CreateIdentity.tsx  DepositModal.tsx  DesktopDevice.tsx  DeviceList.tsx  DonateModal.tsx  ErrorBoundary.tsx  LocalSignerStatus.tsx  ManageDevices.tsx  PairDevice.tsx  PasskeyBadge.tsx  PasswordGeneratorModal.tsx  PinApprovalModal.tsx  QuickLogin.tsx  SignMessageModal.tsx  SignRequestModal.tsx  SmartAccountDashboard.tsx  TestLogin.tsx  TotpCode.tsx  TotpQrScanner.tsx  VaultBackup.tsx  VaultEditApprovalModal.tsx  VaultManagement.tsx  VaultSettings.tsx  WithdrawModal.tsx
docs/: docusaurus.config.ts  package-lock.json  package.json
docs/docs/: contracts.mdx  intro.mdx  quickstart.mdx  security.mdx  smart-account.mdx
docs/docs/sdk/: ruby.md  (+3 more)
extension/: .gitignore  package-lock.json  package.json  wxt.config.ts
extension/entrypoints/: autofill.content.ts  background.ts  webauthn-bridge.content.ts  webauthn.content.ts
extension/src/: cbor.ts  webauthn.test.ts  webauthn.ts  webauthnPrompt.ts
integration/: e2e.ts  e2e_recovery.ts  e2e_revocation.ts  e2e_security.ts  package-lock.json  package.json
mobile/: .dockerignore  .gitignore  Dockerfile  README.md  dev.sh  docker-compose.yml  pubspec.yaml
mobile/lib/: main.dart  theme.dart
mobile/linux/: CMakeLists.txt
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
sdk/: README.md
sdk/python/: LICENSE  README.md  pyproject.toml
sdk/python/truthid/: __init__.py  client.py  contracts.py  types.py
sdk/ruby/: README.md  truthid-sdk.gemspec
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
signaling/: main.py  requirements.txt
turn/: Dockerfile  turnserver.conf
webrtc-demo/: mobile.html  website.html
(+279 files in other folders)
