[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "2"
k256 = { version = "0.13", features = ["ecdsa", "ecdh"] }
sha3 = "0.10"
hex = "0.4"
rand = "0.8"
hidapi = "2"
hkdf = "0.12"
pbkdf2 = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "multipart"] }
axum = "0.8"
tokio = { version = "1", features = ["macros", "sync", "time", "net", "rt"] }

# Só pra registrar o handler do sinal `permission-request` do WebKitGTK e
# aprovar getUserMedia (scan de QR via webcam) — sem isso, todo pedido de
# câmera/microfone é negado por padrão pelo wry/Tauri no Linux (nenhuma UI de
# permissão embutida ainda). Versão travada em "=2.0.2" pra bater exatamente
# com a que o wry 0.55 já usa internamente (mesmo tipo `webkit2gtk::WebView`
# retornado por `PlatformWebview::inner()` — uma versão diferente não
# compilaria). Ver PROJECT_STATE.md, item "QR no TOTP" do backlog.
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "=2.0.2"

