[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "truthid-sdk"
version = "0.1.0"
description = "TruthID passwordless, decentralized authentication SDK for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "masterlxz" },
]
keywords = ["authentication", "passwordless", "decentralized", "blockchain", "web3", "auth"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "web3>=6.0.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/masterlxz/truthid/tree/main/sdk/python#readme"
Repository = "https://github.com/masterlxz/truthid"
Issues = "https://github.com/masterlxz/truthid/issues"

[tool.hatch.build.targets.wheel]
packages = ["truthid"]
